--- a/CSS/cars-card.css
+++ b/CSS/cars-card.css
@@ -211,6 +211,10 @@ html{
     font-weight: bold;
 }
 
+.burgur, .x, .nav-dropdown{
+    display: none;
+}
+
 
 /* Top section 1 */
 
@@ -219,6 +223,7 @@ html{
     background-image: url('../Images/cars-banner.webp');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 700px;
     display: flex;
     align-items: center;
@@ -509,4 +514,191 @@ html{
     background-color: white;
     color: black;
     border: 2px solid black;
+}
+
+@media only screen and (min-width:700px) and (max-width: 1200px) {
+    
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 95%;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .text{
+        display: none;
+    }
+
+    .form-date{
+        width: 70%;
+    }
+
+    .form-date input{
+        border: 1px solid black;
+    }
+
+    .filter{
+        flex-direction: column;
+    }
+
+    .filter select{
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    #search{
+        width: 92%;
+        margin: 10px 0;
+    }
+
+    .parent-cars{
+        grid-template-columns: repeat(2,50%);
+        margin: 75px;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        justify-content: space-between;
+    }
+
+    .bottom-section-1 button{
+        width: 200px    ;
+    }
+}
+
+@media only screen and (max-width:700px){
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 92%;
+    }
+
+    .start-nav h1{
+        font-size: 33px;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .text{
+        display: none;
+    }
+
+    .form-date{
+        width: 80%;
+        margin-top: 94px;
+    }
+
+    .form-date h1{
+        font-size: 30px;
+    }
+
+    .form-date label{
+        font-size: 18px;
+    }
+
+    .form-date input{
+        border: 1px solid black;
+    }
+
+    .mid-section-1>h1{
+        font-size: 30px;
+        margin: 50px;
+    }
+
+    .filter{
+        flex-direction: column;
+        margin: 50px;
+    }
+
+    .filter select{
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    #search{
+        width: 85%;
+        margin: 10px 0;
+    }
+
+    .parent-cars{
+        margin: 50px;
+        grid-template-columns: repeat(1,100%);
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        flex-direction: column;
+        padding-bottom: 50px;
+    }
+
+    .bottom-section-1>div{
+        width: 100%;
+    }
+
+    .bottom-section-1>div:first-child h1{
+        font-size: 28px;
+    }
+
+    .bottom-section-1 button{
+        width: 200px;
+    }
+
+    .bottom-section-2{
+        flex-direction: column;
+    }
+
+    .bottom-section-2>h3{
+        margin-bottom: 20px;
+    }
 }
