--- a/CSS/contact-us.css
+++ b/CSS/contact-us.css
@@ -206,12 +206,18 @@
     padding: 2px;
     font-weight: bold;
 }
+
+.burgur,.x,.nav-dropdown{
+    display: none;
+}
+
 /* Top section 1 */
 
 .top-section-1{
     background-image: url('../Images/contact-us-banner.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .top-section-1 h1{
@@ -343,4 +349,161 @@
     background-color: white;
     color: black;
     border: 2px solid black;
+}
+
+@media only screen and (min-width:700px) and (max-width: 1200px) {
+    
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 95%;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-2{
+        flex-direction: column;
+        margin: 0 75px;
+    }
+
+    .map{
+        width: 100%;
+    }
+
+    .map iframe{
+        width: 100%;
+    }
+
+    .details{
+        width: 100%;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        justify-content: space-between;
+    }
+
+    .bottom-section-1 button{
+        width: 200px    ;
+    }
+}
+
+@media only screen and (max-width:700px){
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 92%;
+    }
+
+    .start-nav h1{
+        font-size: 33px;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-1 h1{
+        padding-top: 100px;
+        height: 250px;
+    }
+
+    .top-section-2{
+        flex-direction: column;
+        margin: 0 50px;
+    }
+
+    .map{
+        width: 100%;
+    }
+
+    .map iframe{
+        width: 100%;
+    }
+
+    .details{
+        width: 100%;
+    }
+
+    .details>div{
+        padding: 20px;
+    }
+
+    .details h1{
+        font-size: 40px;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        flex-direction: column;
+        padding-bottom: 50px;
+    }
+
+    .bottom-section-1>div{
+        width: 100%;
+    }
+
+    .bottom-section-1>div:first-child h1{
+        font-size: 28px;
+    }
+
+    .bottom-section-1 button{
+        width: 200px;
+    }
+
+    .bottom-section-2{
+        flex-direction: column;
+    }
+
+    .bottom-section-2>h3{
+        margin-bottom: 20px;
+    }
 }
