--- a/CSS/deals.css
+++ b/CSS/deals.css
@@ -207,6 +207,10 @@
     font-weight: bold;
 }
 
+.burgur,.x,.nav-dropdown{
+    display: none;
+}
+
 /* Top section 1 */
 
 .top-section-1{
@@ -445,4 +449,226 @@
     background-color: white;
     color: black;
     border: 2px solid black;
+}
+
+
+@media only screen and (min-width:700px) and (max-width: 1200px) {
+    
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 95%;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-1{
+        flex-direction: column;
+    }
+
+    .text{
+        padding-left: 0;
+        width: 80%;
+        margin-bottom: 30px;
+    }
+
+    .img{
+        width: 70%;
+        padding: 0;
+    }
+
+    .img>img{
+        width: 100%;
+    }
+
+    .parent{
+        display: grid;
+        grid-template-columns: repeat(2,50%);
+    }
+
+    .child-cars{
+        width: 100%;
+    }
+
+    .mid-banner-section{
+        flex-direction: column;
+    }
+
+    .img-1{
+        margin-top: 30px;
+        width: 100%;
+    }
+
+    .img-1>img{
+        width: 100%;
+    }
+
+    .text-1{
+        margin: 50px 0;
+        width: 100%;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        justify-content: space-between;
+    }
+
+    .bottom-section-1 button{
+        width: 200px    ;
+    }
+}
+
+@media only screen and (max-width:700px){
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 92%;
+    }
+
+    .start-nav h1{
+        font-size: 33px;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-1{
+        padding-top: 150px;
+        flex-direction: column;
+    }
+
+    .mid-section-1{
+        margin: 20px;
+    }
+
+    .text{
+        padding-left: 0;
+        width: 80%;
+        margin-bottom: 30px;
+    }
+
+    .text h1{
+        font-size: 20px;
+    }
+
+    .img{
+        width: 80%;
+        padding: 0;
+        margin: 20px;
+    }
+
+    .img>img{
+        width: 100%;
+    }
+
+    .mid-section-1 h1{
+        font-size: 20px;
+    }
+
+    .parent{
+        flex-direction: column;
+    }
+
+    .child-cars{
+        width: 100%;
+    }
+
+    .mid-banner-section{
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .img-1{
+        margin-top: 30px;
+        width: 100%;
+        padding: 0px;
+    }
+
+    .img-1 img{
+        width: 100%;
+    }
+
+    .text-1{
+        margin: 50px 0;
+        width: 100%;
+    }
+
+    .text-1 h1,.text-1 h2{
+        font-size: 40px;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        flex-direction: column;
+        padding-bottom: 50px;
+    }
+
+    .bottom-section-1>div{
+        width: 100%;
+    }
+
+    .bottom-section-1>div:first-child h1{
+        font-size: 28px;
+    }
+
+    .bottom-section-1 button{
+        width: 200px;
+    }
+
+    .bottom-section-2{
+        flex-direction: column;
+    }
+
+    .bottom-section-2>h3{
+        margin-bottom: 20px;
+    }
 }
