--- a/CSS/login-signup.css
+++ b/CSS/login-signup.css
@@ -82,6 +82,18 @@
 
 .last-nav{
     margin-right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.last-nav i{
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 20px;
 }
 
 .last-nav button{
@@ -100,12 +112,21 @@
 
 }
 
+.burgur,.x,.nav-dropdown{
+    display: none;
+}
+
+.nav-dropdown{
+    z-index: 2;
+}
+
 /* signup */
 
 body{
     background-image: url('../Images/background-login-signup1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .selector{
@@ -293,9 +314,157 @@ body{
     border: none;
     outline: none;
     border-bottom: 3px solid white;
+    margin-bottom: 0px;
 }
 
 .btn-otp{
     color: black;
     
+}
+
+.button-box{
+    border: none;
+}
+
+@media only screen and (min-width:700px) and (max-width: 1200px) {
+    
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 95%;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    body{
+        background-image: url('../Images/background-ipad-signup.webp');
+        padding: 0 0 156px 0;
+    }
+
+    .parent{
+        height: 600px;
+        width: 80%;
+        margin: 20% auto;
+    }
+
+    .parent input{
+        font-size: 25px;
+        margin-bottom: 30px;
+    }
+
+    .parent button{
+        font-size: 30px;
+        height: 40px;
+    }
+
+    .otp{
+        margin-bottom: 20px;
+    }
+
+    .otp input{
+        margin: 0px;
+    }
+
+    #btn3{
+        height: 50px;
+    }
+
+    #btn1{
+        font-size: 18px;
+    }
+
+}
+
+@media only screen and (max-width:700px){
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 92%;
+    }
+
+    .start-nav h1{
+        font-size: 33px;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    body{
+        background-image: url('../Images/background-phone-signup.jpg');
+        padding: 0 0 156px 0;
+    }
+
+    .parent{
+        height: 600px;
+        width: 80%;
+        margin: 20% auto;
+    }
+
+    .parent input{
+        font-size: 20px;
+        margin-bottom: 30px;
+    }
+
+    .parent button{
+        font-size: 17px;
+        height: 40px;
+    }
+
+    .otp{
+        margin-bottom: 20px;
+    }
+
+    .otp input{
+        margin: 0px;
+        width: 150px;
+    }
 }
