--- a/CSS/single-card.css
+++ b/CSS/single-card.css
@@ -207,6 +207,10 @@
     font-weight: bold;
 }
 
+.burgur,.x,.nav-dropdown{
+    display: none;
+}
+
 /* Top section 1 */
 
 .top-section-1{
@@ -460,4 +464,198 @@
     background-color: white;
     color: black;
     border: 2px solid black;
+}
+
+@media only screen and (min-width:700px) and (max-width: 1200px) {
+    
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 95%;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-1{
+        flex-direction: column;
+        margin: 0 75px;
+    }
+
+    .img{
+        width: 100%;
+    }
+
+    .text{
+        width: 100%;
+    }
+
+    .mid-section-1{
+        margin: 50px;
+    }
+
+    .mid-section-1 h1{
+        font-size: 40px;
+    }
+
+    .parent{
+        width: 100%;
+    }
+
+    .parent i{
+        display: none;
+    }
+
+    .child{
+        overflow: initial;
+        display: grid;
+        grid-template-columns: repeat(2,48%);
+        gap: 20px;
+    }
+
+    .child-cars{
+        width: 100%;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        justify-content: space-between;
+    }
+
+    .bottom-section-1 button{
+        width: 200px    ;
+    }
+}
+
+@media only screen and (max-width:700px){
+    .navbar{
+        justify-content: space-between;
+        padding: 10px 20px;  
+        width: 92%;
+    }
+
+    .start-nav h1{
+        font-size: 33px;
+    }
+    
+    .center-nav{
+        display: none;
+    }
+
+    .burgur{
+        display: block;
+    }
+
+    .x{
+        display: none;
+    }
+
+    .nav-dropdown{
+        display: none;
+        background-color: black;
+        color: white;
+        position: absolute;
+        width: 250px;
+        right: 0;
+        top: 75px;
+        border: 1px solid black;
+    }
+
+    .nav-dropdown h2{
+        padding: 40px 20px;
+    }
+
+    .top-section-1{
+        flex-direction: column;
+        margin: 0 30px;
+    }
+
+    .img{
+        width: 100%;
+    }
+
+    .text{
+        width: 100%;
+    }
+
+    .text h1{
+        font-size: 3    0px;
+    }
+
+    .mid-section-1{
+        margin: 20px;
+    }
+
+    .mid-section-1 h1{
+        font-size: 30px;
+    }
+
+    .parent{
+        width: 100%;
+    }
+
+    .parent i{
+        display: none;
+    }
+
+    .child{
+        overflow: initial;
+        display: grid;
+        grid-template-columns: repeat(1,98%);
+        gap: 20px;
+    }
+
+    .child-cars{
+        width: 100%;
+    }
+
+    .bottom-section-1{
+        margin: 0 50px;
+        flex-direction: column;
+        padding-bottom: 50px;
+    }
+
+    .bottom-section-1>div{
+        width: 100%;
+    }
+
+    .bottom-section-1>div:first-child h1{
+        font-size: 28px;
+    }
+
+    .bottom-section-1 button{
+        width: 200px;
+    }
+
+    .bottom-section-2{
+        flex-direction: column;
+    }
+
+    .bottom-section-2>h3{
+        margin-bottom: 20px;
+    }
 }
